--- a/_sass/web.scss
+++ b/_sass/web.scss
@@ -95,6 +95,7 @@ $nav-bar-children-prompt: normal !default; // \2026 is an ellipsis (…)
 $nav-bar-children-prompt-hide: normal !default;
 $nav-bar-scrollbar: true !default;
 $nav-bar-width: 15em !default;
+$nav-bar-fixed: true !default;
 $nav-bar-border-color: $color-light !default;
 $nav-bar-background-color: white !default;
 $nav-bar-search-background-color: white !default;
